# dmc-1-t2-notebook-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: openapi-version.yml  preview.yml  pull-request.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  db.py  errors.py  logging.py  request_limits.py  time.py
app/modules/: __init__.py
app/modules/ai_context/: __init__.py  dependencies.py
app/modules/auth/: __init__.py  dependencies.py  dependencies_services.py  models.py
app/modules/execution/: __init__.py  (+1 more)
docs/: auth.md  ci-cd.md  domain-boundaries.md  openapi.json
liquibase/: Dockerfile  liquibase.properties
liquibase/changelog/: changelog-master.xml
msd_fastapi_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: auth_cleanup.py  openapi.py
tests/: conftest.py  test_ai_context.py  test_auth.py  test_auth_cleanup_cli.py  test_auth_cleanup_service.py  test_auth_logout_api.py  test_auth_me_jwt.py  test_auth_otp_api.py  test_auth_placeholder.py  test_auth_refresh_api.py  test_auth_repositories.py  test_auth_services.py  test_auth_settings.py  test_bedrock_client.py  test_email_service.py  test_errors.py  test_execution.py  test_health.py  test_llm_api.py  test_llm_services.py  test_llm_settings.py  test_logout_service.py  test_notebook_demo.py  test_notebook_merge.py  test_notebook_restore.py  test_notebooks_api.py  test_otp_request_service.py  test_otp_verify_service.py  test_refresh_token_service.py  test_startup.py
(+94 files in other folders)
