[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msd-fastapi-template"
version = "0.1.0"
description = "FastAPI starter template for Modern Software Development course"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1,<0.137.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "structlog>=24.0.0,<26.0.0",
    "uvicorn[standard]>=0.47.0,<0.48.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["liquibase*", "docs*", "tests*", "scripts*"]
